--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         action ACTION_WATER_PLANTS which updates last_watered timestamp for all plants still alive -->
         <!-- TODO (3): Add a service tag for PlantWateringService -->
 
+        <service android:name=".PlantWateringService" />
+
         <provider
             android:name=".provider.PlantContentProvider"
             android:authorities="com.example.android.mygarden"
